--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
   text-decoration: none;
 }
 .header__nav {
-  padding: 15px 0;
+  padding: 11px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -46,9 +46,12 @@ body {
   object-fit: contain;
 }
 .header__menu {
+  width: 75%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 35px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -57,8 +60,11 @@ body {
 }
 
 .header__menu__link {
-  padding: 15px 15px;
+  font-size: 16px;
+  line-height: 16px;
+  padding: 15px;
   text-transform: uppercase;
+  transition: background-color 0.3s;
 }
 
 .header__menu__link:hover {
