--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,28 @@ body {
 .header__menu__link:hover {
   background-color: var(--accent-light);
 }
+
+.intro {
+  padding: 4em 0;
+}
+.intro-inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.intro-right {
+  width: 60%;
+}
+
+.intro-img {
+  width: 250px;
+  height: 250px;
+}
+.intro-left {
+  width: 30%;
+}
+.intro-right h1,
+.intro-right h3 {
+  margin: 0 0 10px;
+}
