--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
   color: var(--accent);
 }
 section {
-  padding: 60px 0;
+  padding: 40px 0;
 }
 .container {
   width: 1140px;
@@ -104,18 +104,7 @@ section {
 .intro-right h3 {
   margin: 0 0 10px;
 }
-.contacts ul {
-  display: flex;
-  justify-content: center;
-  flex: wrap;
-  gap: 25px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.contacts li {
-  text-align: center;
-}
+
 .skills {
   background-color: var(--accent);
   color: var(--pure-white);
@@ -147,4 +136,88 @@ section {
   border-radius: 7px;
   font-size: 1em;
   line-height: 0.8;
+}
+.wrapper {
+  display: grid;
+  grid-column-gap: 10px;
+  grid-row-gap: 1em;
+  text-align: center;
+}
+.wrapper img {
+  width: 50%;
+  height: 70%;
+}
+.wrapper a {
+  text-align: center;
+  color: var(--pure-white);
+  text-decoration: none;
+  background-color: var(--accent);
+}
+.wrapper p {
+  background-position: center;
+}
+
+.inner-edu {
+  background-color: var(--accent);
+  color: var(--pure-white);
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.edu-right {
+  padding: 10px;
+}
+.edu-left {
+  padding: 15px;
+}
+.languages {
+  text-align: left;
+  padding: 0 270px;
+  margin: 40px 0;
+}
+
+.contacts {
+  background-color: var(--accent);
+  color: var(--pure-white);
+}
+.contacts ul {
+  display: flex;
+  justify-content: center;
+  flex: wrap;
+  gap: 25px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  backround-color: var(--accent-light);
+}
+.contacts li {
+  text-align: center;
+}
+.contacts a {
+  color: var(--pure-white);
+}
+.links {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  flex: wrap;
+
+  color: var(--pure-white);
+  padding: 40px 0;
+  text-align: center;
+}
+.links div {
+  border-radius: 10px;
+}
+.links img {
+  width: 30%;
+}
+.reg {
+  text-align: center;
+  background-color: var(--accent);
+  padding: 15px 20px;
+  color: var(--pure-white);
+}
+.reg a {
+  color: var(--pure-white);
 }
