--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ section {
   margin: 0;
   padding: 0;
   list-style: none;
-  backround-color: var(--accent-light);
+  background-color: var(--accent-light);
 }
 .contacts li {
   text-align: center;
